--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 			<a href="#" class="hotspot option-start-incluyeme" data-target="incluyeme_1.png"></a>
 			
 			<a href="#" class="hotspot option-start-registro" data-target="registro_1.png"></a>
+			
+			<a href="#" class="hotspot option-start-reniec" data-target="reniecminjusdh.png"></a>
 		</div>
 		
 		<div id="registro1-overlay" class="overlay-layer hidden">
@@ -58,6 +60,53 @@
 			<a href="#" class="hotspot link-justicia" data-target="image_5.png"></a>
 		</div>
 
+		<div id="salud-overlay" class="overlay-layer hidden">
+			<div class="hotspot option-salud-1" 
+				 data-info="<b>En Orientación:</b><br>Te informamos y guiamos sobre acceso a servicios de salud general y especializada en establecimientos del Minsa, EsSalud y gobiernos regionales.">
+			</div>
+
+			<div class="hotspot option-salud-2" 
+				 data-info="<b>En Certificación:</b><br>Te asesoramos sobre requisitos, trámites y centros autorizados para la obtención del Certificado de Discapacidad.">
+			</div>
+
+			<div class="hotspot option-salud-3" 
+				 data-info="<b>En Rehabilitación:</b><br>Te orientamos para acceder a servicios de rehabilitación física y terapias complementarias en instituciones públicas.">
+			</div>
+		</div>
+		
+		<div id="empleo-overlay" class="overlay-layer hidden">
+			<div class="hotspot option-empleo-maletin" 
+				 data-info="<b>Bolsa de Trabajo:</b><br>Te orientamos sobre convocatorias laborales y la cuota de empleo para personas con discapacidad (5% en entidades públicas y 3% en privadas).">
+			</div>
+
+			<div class="hotspot option-empleo-silla" 
+				 data-info="<b>Emprendimiento:</b><br>Te asesoramos para iniciativas de autoempleo.">
+			</div>
+		</div>		
+		
+		<div id="proteccion-overlay" class="overlay-layer hidden">
+			<div class="hotspot option-proteccion-programas" 
+				 data-info="<b>Programas Sociales:</b><br>Te orientamos para la afiliación y trámites de programas como Pensión Contigo y Pensión 65.">
+			</div>
+
+			<div class="hotspot option-proteccion-bono" 
+				 data-info="<b>Bono de Vivienda:</b><br>Información sobre la postulación a bonos del Estado como Techo Propio para familias con personas con discapacidad.">
+			</div>
+
+			<div class="hotspot option-proteccion-reniec" 
+				 data-info="<b>Identidad (RENIEC):</b><br>Orientación y atención para trámites de DNI (obtención, renovación, duplicado) y actualización de datos gracias a convenios interinstitucionales.">
+			</div>
+		</div>
+		
+		<div id="justicia-overlay" class="overlay-layer hidden">
+			<div class="hotspot option-justicia-asesoria" 
+				 data-info="<b>Asesoría Legal Gratuita:</b><br>Abogados especializados atienden casos de discriminación, violencia o vulneración de derechos.">
+			</div>
+
+			<div class="hotspot option-justicia-carnet" 
+				 data-info="<b>Carnet del CONADIS:</b><br>Orientación y gestión del carnet de discapacidad.">
+			</div>
+		</div>
 
         <div id="info-modal" class="modal hidden">
             <div class="modal-content">
