--- a/index.html
+++ b/index.html
@@ -88,23 +88,11 @@
 			<div class="hotspot option-proteccion-programas" 
 				 data-info="<b>Programas Sociales:</b><br>Te orientamos para la afiliación y trámites de programas como Pensión Contigo y Pensión 65.">
 			</div>
-
-			<div class="hotspot option-proteccion-bono" 
-				 data-info="<b>Bono de Vivienda:</b><br>Información sobre la postulación a bonos del Estado como Techo Propio para familias con personas con discapacidad.">
-			</div>
-
-			<div class="hotspot option-proteccion-reniec" 
-				 data-info="<b>Identidad (RENIEC):</b><br>Orientación y atención para trámites de DNI (obtención, renovación, duplicado) y actualización de datos gracias a convenios interinstitucionales.">
-			</div>
 		</div>
-		
+
 		<div id="justicia-overlay" class="overlay-layer hidden">
 			<div class="hotspot option-justicia-asesoria" 
-				 data-info="<b>Asesoría Legal Gratuita:</b><br>Abogados especializados atienden casos de discriminación, violencia o vulneración de derechos.">
-			</div>
-
-			<div class="hotspot option-justicia-carnet" 
-				 data-info="<b>Carnet del CONADIS:</b><br>Orientación y gestión del carnet de discapacidad.">
+				 data-info="<b>Asesoría Legal Gratuita:</b><br>Abogados especializados orientan en casos de discriminación, violencia o vulneración de derechos.">
 			</div>
 		</div>
 
